--- a/assets/css/ezbootstrapsandbox.css
+++ b/assets/css/ezbootstrapsandbox.css
@@ -1,7 +1,12 @@
-.intro{
-text-align: center
-}
-
 h1,h2,h3,h4,h5,h6{
 	font-family: 'Days One', sans-serif 
 }
+
+.intro{
+    text-align: center
+}
+
+.panel-default>.panel-heading.active{
+    background-color: #888
+}
+
